Fixed up the paragraph spacing in the editor
no issue

--- a/apps/comments-ui/src/index.css
+++ b/apps/comments-ui/src/index.css
@@ -34,6 +34,11 @@ body {
     padding-left: 1rem;
 }
 
+/* Paragraphs */
+.gh-comment-content p {
+    margin: 0 0 2rem;
+}
+
 /* The following lines are needed for the editor */
 
 /* Placeholder */
